# homework2.5

./: CMakeLists.txt  README.md
src/: common.hpp  main.cpp
